# codextop

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
scripts/: install_zshrc.sh  start_codextop_backend.sh  stop_codextop_backend.sh
src/: codextop.py
src/auth/: __init__.py  codex_auth.py
src/codextop/: __init__.py  check_codex_quota.py  codex_auth.py  codex_quota_sampler.py  codextop.py  color_schemes.json  color_schemes.py  paths.py
src/core/: __init__.py  constants.py  state.py  update_check.py  updater.py  version.py
src/quota/: __init__.py  check_codex_quota.py  codex_quota_sampler.py  quota_format.py  token_usage_cache.py  windows.py
src/ui/: __init__.py  app.py  charts.py  color_schemes.py  history.py  models.py  panels.py  preload.py  session_tokens.py  settings.py  terminal_io.py  terminal_text.py  token_charts.py  trusted_directories.py
src/ui/styles/: bright.json  cividis.json  classic.json  coolwarm.json  icefire.json  inferno.json  magma.json  plasma.json  rainbow.json  redblue.json  turbo.json  viridis.json
tests/: test_background_preload.py  test_codex_auth.py  test_color_scheme_cache.py  test_history_smoothing.py  test_quota_windows.py  test_sampler_pid_lock.py  test_token_usage.py  test_usage_mode_lazy_history.py
